[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/BFGProjectile/BFGProjectile.gd" type="Script" id=1]
[ext_resource path="res://assets/images/custom/misc/circle.png" type="Texture" id=2]

[sub_resource type="SphereMesh" id=1]
radial_segments = 8
rings = 4

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0666667, 1, 0, 1 )
emission_enabled = true
emission = Color( 0.27451, 1, 0, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereShape" id=4]
radius = 10.9

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 7, 7, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.568627, 1, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 50, 50, 50 ), Vector3( 0.001, 0.001, 0.001 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.568627, 1, 0, 1 ), Color( 0.568627, 1, 0, 0 ) ]
}

[node name="BFGProjectile" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="Radius" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Radius"]
shape = SubResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0 )
visible = false
modulate = Color( 0.568627, 1, 0, 1 )
billboard = 1
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/RESET = SubResource( 6 )
anims/hit = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Radius" to="." method="_on_Radius_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
